--- a/src/scss/core/utilities/_text.scss
+++ b/src/scss/core/utilities/_text.scss
@@ -30,12 +30,19 @@
   }
 }
 
+// Misc
 .t-justify {
   text-align: justify !important;
 }
+
 .t-nowrap {
   white-space: nowrap !important;
 }
+
+.t-pre {
+  white-space: pre !important;
+}
+
 .t-truncate {
   overflow: hidden;
   text-overflow: ellipsis;
